# krabbykrus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RUNLOG.md  SPEC.md  SPEC_gap.md  STATUS.md
.githooks/: post-commit  pre-commit
.github/workflows/: build.yml  ci.yml  preview.yml  release.yml
crates/krabbykrus/: Cargo.toml
crates/krabbykrus-channels/: Cargo.toml
crates/krabbykrus-channels/src/: lib.rs
crates/krabbykrus-cli/: Cargo.toml
crates/krabbykrus-cli/src/: lib.rs
crates/krabbykrus-cli/src/commands/: config.rs  credentials.rs  doctor.rs  gateway.rs  migrate.rs  mod.rs  session.rs  tool.rs
crates/krabbykrus-cli/src/tui/: app.rs  credentials.rs  mod.rs  state.rs
crates/krabbykrus-cli/src/tui/components/: agents.rs  credentials.rs  dashboard.rs  mod.rs  modals.rs  models.rs  sessions.rs  settings.rs  sidebar.rs
crates/krabbykrus-core/: Cargo.toml
crates/krabbykrus-core/src/: agent.rs  config.rs  credential_bridge.rs  error.rs  gateway.rs  lib.rs  message.rs  session.rs  web_ui.rs
crates/krabbykrus-credentials/: Cargo.toml
crates/krabbykrus-credentials/src/: audit.rs  crypto.rs  error.rs  lib.rs  manager.rs  permissions.rs  storage.rs  types.rs
crates/krabbykrus-llm/: Cargo.toml
crates/krabbykrus-llm/src/: anthropic.rs  lib.rs
crates/krabbykrus-memory/: Cargo.toml
crates/krabbykrus-memory/src/: lib.rs
crates/krabbykrus-plugins/: Cargo.toml
crates/krabbykrus-plugins/src/: lib.rs
crates/krabbykrus-security/: Cargo.toml
crates/krabbykrus-security/src/: lib.rs
crates/krabbykrus-tools/: Cargo.toml
crates/krabbykrus-tools/src/: builtin.rs  lib.rs
crates/krabbykrus/src/: main.rs
crates/rockbot/: Cargo.toml
crates/rockbot-agent/: Cargo.toml
crates/rockbot-agent/src/: agent.rs  chat_commands.rs  credential_bridge.rs  error.rs  guardrails.rs  hooks.rs  indexer.rs  lib.rs  metrics.rs  orchestration.rs  sandbox.rs  skills.rs  telemetry.rs  tokenizer.rs  trajectory.rs
crates/rockbot-butler/: Cargo.toml
crates/rockbot-butler/src/: chat_commands.rs  commands.rs  lib.rs
crates/rockbot-channels/: Cargo.toml
crates/rockbot-channels-discord/: Cargo.toml
crates/rockbot-channels-discord/src/: lib.rs
crates/rockbot-channels-signal/: Cargo.toml
crates/rockbot-channels-signal/src/: lib.rs
crates/rockbot-channels-telegram/: Cargo.toml
crates/rockbot-channels-telegram/src/: lib.rs
crates/rockbot-channels/src/: lib.rs
crates/rockbot-cli/: Cargo.toml
crates/rockbot-cli/src/: lib.rs
crates/rockbot-cli/src/commands/: agent.rs  cert.rs  config.rs  credentials.rs  doctor.rs  gateway.rs  migrate.rs  mod.rs  session.rs  storage.rs  tool.rs  vault_unlock.rs
crates/rockbot-cli/src/tui/: app.rs  credentials.rs  doctor_tui.rs  effects.rs  keybindings.rs  mod.rs  state.rs  ui.rs
crates/rockbot-cli/src/tui/components/: agents.rs  card_chain.rs  card_widgets.rs  context_menu.rs  credentials.rs  cron.rs  dashboard.rs  mod.rs  modals.rs  models.rs  sessions.rs  settings.rs  sidebar.rs
crates/rockbot-client/: Cargo.toml
crates/rockbot-client/src/: acp.rs  client.rs  lib.rs  remote_exec.rs
crates/rockbot-config/: Cargo.toml
crates/rockbot-config/src/: chat_commands.rs  config.rs  lib.rs  message.rs
crates/rockbot-core/: Cargo.toml
crates/rockbot-core/src/: a2a.rs  acp.rs  agent.rs  chat_commands.rs  config.rs  credential_bridge.rs  cron.rs  error.rs  gateway.rs  guardrails.rs  hooks.rs  indexer.rs  lib.rs  message.rs  metrics.rs  orchestration.rs  remote_exec.rs  routing.rs  sandbox.rs  session.rs  skills.rs  slash_commands.rs  telemetry.rs  tokenizer.rs  trajectory.rs  web_ui.rs
crates/rockbot-credentials/: Cargo.toml
crates/rockbot-credentials-schema/: Cargo.toml
crates/rockbot-credentials/examples/: test_vault.rs
crates/rockbot-credentials/src/: audit.rs  chat_commands.rs  crypto.rs  error.rs  lib.rs  manager.rs  permissions.rs  storage.rs  types.rs
crates/rockbot-doctor/: Cargo.toml
crates/rockbot-doctor/src/: chat_commands.rs  learned.rs  lib.rs  migration.rs  prompts.rs  repair.rs  storage.rs
crates/rockbot-gateway/: Cargo.toml
crates/rockbot-gateway/src/: a2a.rs  cron.rs  error.rs  gateway.rs  lib.rs  routing.rs  slash_commands.rs
crates/rockbot-llm/: Cargo.toml
crates/rockbot-llm-anthropic/: Cargo.toml
crates/rockbot-llm-anthropic/examples/: test_oauth.rs
crates/rockbot-llm-anthropic/src/: lib.rs
crates/rockbot-llm-bedrock/: Cargo.toml
crates/rockbot-llm-bedrock/src/: lib.rs
crates/rockbot-llm-ollama/: Cargo.toml
crates/rockbot-llm-ollama/src/: lib.rs
crates/rockbot-llm-openai/: Cargo.toml
crates/rockbot-llm-openai/src/: lib.rs
crates/rockbot-llm/examples/: test_oauth.rs
crates/rockbot-llm/src/: anthropic.rs  bedrock.rs  lib.rs  ollama.rs  openai.rs
crates/rockbot-memory/: Cargo.toml
crates/rockbot-memory/src/: lib.rs
crates/rockbot-overseer/: Cargo.toml
crates/rockbot-plugins/: Cargo.toml
crates/rockbot-security/: Cargo.toml
crates/rockbot-session/: Cargo.toml
crates/rockbot-storage/: Cargo.toml
crates/rockbot-storage-runtime/: Cargo.toml
crates/rockbot-storage-utility/: Cargo.toml
crates/rockbot-store/: Cargo.toml
crates/rockbot-tools/: Cargo.toml
crates/rockbot-tools-credentials/: Cargo.toml
crates/rockbot-tools-markdown/: Cargo.toml
crates/rockbot-tools-mcp/: Cargo.toml
crates/rockbot-tools-system/: Cargo.toml
crates/rockbot-tui/: Cargo.toml
crates/rockbot-ui-model/: Cargo.toml
crates/rockbot-vdisk/: Cargo.toml
crates/rockbot-webui/: Cargo.toml
docs/: FEATURES.md  README.md  api.md  feature-evaluation.md
docs/architecture/: agent-topology-and-vdisk-architecture-proposal.md  browser-plugin-architecture-plan.md  code-review-round2-remediation-plan.md  crates.md  encrypted-storage-pki-refactor-proposal.md  execution-locality-proposal.md  overview.md  pki.md  post-maintenance-audit-2026-03-18.md  security.md  tooling-gap-analysis.md  vault-replication.md  virtual-disk-architecture-plan.md  webui-wasm-migration-plan.md
docs/user-guide/: configuration.md  (+2 more)
examples/: demo.rs  test_vault.rs
(+62 files in other folders)
