[workspace]
members = [
    "crates/krabbykrus",
    "crates/krabbykrus-core",
    "crates/krabbykrus-tools",
    "crates/krabbykrus-channels",
    "crates/krabbykrus-memory",
    "crates/krabbykrus-security",
    "crates/krabbykrus-credentials",
    "crates/krabbykrus-llm",
    "crates/krabbykrus-plugins",
    "crates/krabbykrus-cli",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime - unavoidable dependency
tokio = { version = "1.40", features = ["full"] }

# Serialization - industry standard
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration - TOML support
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking - minimal, well-audited
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tungstenite = "0.24"
tokio-tungstenite = "0.24"

# Cryptography - minimal, well-audited
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"

# Database - SQLite bundled for security
rusqlite = { version = "0.32", features = ["bundled"] }

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions
regex = "1.0"

# Directory utilities
dirs = "5.0"

# Logging - simple, minimal
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Shared dev dependencies
[workspace.dependencies.tempfile]
version = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"