[workspace]
members = [
    "crates/rockbot",
    "crates/rockbot-tools",
    "crates/rockbot-tools-system",
    "crates/rockbot-tools-credentials",
    "crates/rockbot-tools-mcp",
    "crates/rockbot-tools-markdown",
    "crates/rockbot-channels",
    "crates/rockbot-channels-discord",
    "crates/rockbot-channels-telegram",
    "crates/rockbot-channels-signal",
    "crates/rockbot-memory",
    "crates/rockbot-security",
    "crates/rockbot-credentials",
    "crates/rockbot-credentials-schema",
    "crates/rockbot-llm",
    "crates/rockbot-llm-bedrock",
    "crates/rockbot-llm-anthropic",
    "crates/rockbot-llm-openai",
    "crates/rockbot-llm-ollama",
    "crates/rockbot-plugins",
    "crates/rockbot-cli",
    "crates/rockbot-overseer",
    "crates/rockbot-webui",
    "crates/rockbot-config",
    "crates/rockbot-session",
    "crates/rockbot-agent",
    "crates/rockbot-client",
    "crates/rockbot-gateway",
    "crates/rockbot-pki",
    "crates/rockbot-doctor",
    "crates/rockbot-storage",
    "crates/rockbot-storage-runtime",
    "crates/rockbot-storage-utility",
    "crates/rockbot-ui-model",
    "crates/rockbot-deploy",
    "crates/rockbot-butler",
    "crates/rockbot-tui",
    "crates/rockbot-chat",
    "crates/rockbot-editor",
    "crates/rockbot-shell", "crates/rockbot-vdisk",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime - unavoidable dependency
tokio = { version = "1.40", features = ["full"] }

# Serialization - industry standard
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Configuration - TOML support
toml = "0.8"
toml_edit = "0.22"

# Claude Code SDK
claude-agent-sdk = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking - minimal, well-audited
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Cryptography - minimal, well-audited
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Async utilities
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regular expressions
regex = "1.0"

# Glob pattern matching
glob = "0.3"

# String similarity / fuzzy matching
strsim = "0.11"

# Cron scheduling
cron = "0.13"

# Directory utilities
dirs = "5.0"

# Web UI
leptos = { version = "0.8", default-features = false, features = ["ssr"] }

# Logging - simple, minimal
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Metrics
metrics = "0.24"

# BPE tokenizer for accurate token counting
tiktoken-rs = "0.6"

# TLS
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["x509-parser", "pem"] }
x509-parser = "0.16"
time = "0.3"

# OpenTelemetry (optional, behind `otel` feature)
# Noise Protocol for encrypted remote execution
snow = "0.9"

# AWS SDKs (optional, behind feature flags)
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-route53 = "1"

opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Shared dev dependencies
[workspace.dependencies.tempfile]
version = "3.0"

[workspace.lints.clippy]
# Warn -- these should be addressed over time
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Warn -- code quality
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
unnecessary_lazy_evaluations = "warn"
derivable_impls = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
single_match_else = "warn"
implicit_clone = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
inconsistent_struct_constructor = "warn"
map_unwrap_or = "warn"
unused_self = "warn"
needless_borrow = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"

# Documentation settings
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Package metadata for all crates
[workspace.package]
version = "0.4.62"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/TrippingKelsea/rockbot"
documentation = "https://docs.rs/rockbot"
keywords = ["ai", "agent", "llm", "credentials", "security"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
