[package]
name = "krabbykrus-core"
version = "0.1.0"
edition = "2021"
description = "Core Krabbykrus framework components"
license = "MIT"

[dependencies]
krabbykrus-tools = { path = "../krabbykrus-tools" }
krabbykrus-memory = { path = "../krabbykrus-memory" }
krabbykrus-llm = { path = "../krabbykrus-llm" }
krabbykrus-security = { path = "../krabbykrus-security" }
krabbykrus-credentials = { path = "../krabbykrus-credentials" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }