[package]
name = "krabbykrus-memory"
version = "0.1.0"
edition = "2021"
description = "Memory and search system for Krabbykrus"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }