[package]
name = "krabbykrus-security"
version = "0.1.0"
edition = "2021"
description = "Security and sandboxing for Krabbykrus"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }