[package]
name = "rockbot-agent"
version.workspace = true
edition = "2021"
description = "Agent execution engine for RockBot"
license = "MIT"

[lints]
workspace = true

[dependencies]
rockbot-client = { path = "../rockbot-client", optional = true }
rockbot-config = { path = "../rockbot-config" }
rockbot-session = { path = "../rockbot-session" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }
rockbot-tools = { path = "../rockbot-tools" }
rockbot-memory = { path = "../rockbot-memory" }
rockbot-security = { path = "../rockbot-security" }
rockbot-credentials = { path = "../rockbot-credentials" }
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
metrics = { workspace = true }
tiktoken-rs = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
strsim = { workspace = true }
which = "6"
toml = { workspace = true }
toml_edit = { workspace = true }
rand = "0.8"
rusqlite = { workspace = true }
futures = { workspace = true }

# OpenTelemetry (optional, behind `otel` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
remote-exec = ["dep:rockbot-client", "rockbot-client/remote-exec"]

[dev-dependencies]
tempfile = { workspace = true }
