[package]
name = "rockbot-butler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rockbot-overseer = { path = "../rockbot-overseer" }
rockbot-config = { path = "../rockbot-config" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
