[package]
name = "rockbot-channels-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram channel plugin for RockBot"
license = "MIT"

[dependencies]
rockbot-channels = { path = "../rockbot-channels", default-features = false }
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { workspace = true }
tokio-stream = "0.1"
