[package]
name = "rockbot-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for RockBot"
license = "MIT"

[features]
default = ["bedrock", "discord", "telegram", "signal", "tools-credentials", "tools-mcp", "tools-markdown"]
# LLM providers
anthropic = ["rockbot-llm/anthropic", "rockbot-core/anthropic", "rockbot-tui/anthropic"]
openai = ["rockbot-llm/openai", "rockbot-core/openai", "rockbot-tui/openai"]
ollama = ["rockbot-llm/ollama", "rockbot-core/ollama", "rockbot-tui/ollama"]
bedrock = ["rockbot-llm/bedrock", "rockbot-core/bedrock", "rockbot-tui/bedrock"]
# Channel providers
discord = ["rockbot-core/discord", "rockbot-tui/discord"]
telegram = ["rockbot-core/telegram", "rockbot-tui/telegram"]
signal = ["rockbot-core/signal", "rockbot-tui/signal"]
# Tool providers
tools-credentials = ["rockbot-core/tools-credentials", "rockbot-tui/tools-credentials"]
tools-mcp = ["rockbot-core/tools-mcp", "rockbot-tui/tools-mcp"]
tools-markdown = ["rockbot-core/tools-markdown", "rockbot-tui/tools-markdown"]
# Embedded overseer
overseer = ["rockbot-core/overseer", "rockbot-tui/overseer"]
# Embedded doctor AI for config diagnostics
doctor-ai = ["dep:rockbot-doctor", "rockbot-tui/doctor-ai"]
# Embedded butler companion agent
butler = ["dep:rockbot-butler", "rockbot-core/butler", "rockbot-tui/butler"]
# Remote tool execution
remote-exec = ["rockbot-core/remote-exec", "rockbot-client/remote-exec", "rockbot-tui/remote-exec"]
# S3 CA distribution + Route53 DNS
bedrock-deploy = ["dep:rockbot-deploy", "rockbot-deploy/bedrock", "rockbot-core/bedrock-deploy"]
# Allow plain-text HTTP/WS connections
http-insecure = ["rockbot-core/http-insecure", "rockbot-client/http-insecure", "rockbot-tui/http-insecure"]

[lints]
workspace = true

[dependencies]
rockbot-client = { path = "../rockbot-client" }
rockbot-core = { path = "../rockbot-core", default-features = false }
rockbot-tools = { path = "../rockbot-tools" }
rockbot-memory = { path = "../rockbot-memory" }
rockbot-security = { path = "../rockbot-security" }
rockbot-credentials = { path = "../rockbot-credentials" }
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }
rockbot-pki = { path = "../rockbot-pki" }
rockbot-doctor = { path = "../rockbot-doctor", optional = true }
rockbot-deploy = { path = "../rockbot-deploy", optional = true }
rockbot-butler = { path = "../rockbot-butler", optional = true }
rockbot-store = { path = "../rockbot-store" }
rockbot-tui = { path = "../rockbot-tui", default-features = false }

uuid = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
time = { workspace = true }
rpassword = "7"
getrandom = "0.2"
atty = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
