[package]
name = "rockbot-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for RockBot"
license = "MIT"

[features]
default = ["bedrock", "discord", "telegram", "signal", "tools-credentials", "tools-mcp", "tools-markdown"]
# LLM providers
anthropic = ["dep:rockbot-llm-anthropic", "rockbot-tui/anthropic"]
openai = ["dep:rockbot-llm-openai"]
ollama = ["dep:rockbot-llm-ollama", "rockbot-gateway/ollama", "rockbot-tui/ollama"]
bedrock = ["dep:rockbot-llm-bedrock"]
# Channel providers
discord = ["rockbot-gateway/discord", "rockbot-tui/discord"]
telegram = ["rockbot-gateway/telegram", "rockbot-tui/telegram"]
signal = ["rockbot-gateway/signal", "rockbot-tui/signal"]
# Tool providers
tools-credentials = ["rockbot-gateway/tools-credentials", "rockbot-tui/tools-credentials"]
tools-mcp = ["rockbot-gateway/tools-mcp", "rockbot-tui/tools-mcp"]
tools-markdown = ["rockbot-gateway/tools-markdown", "rockbot-tui/tools-markdown"]
# Telemetry
otel = ["rockbot-gateway/otel"]
# Embedded overseer
overseer = ["dep:rockbot-overseer", "rockbot-gateway/overseer", "rockbot-tui/overseer"]
# Embedded doctor AI for config diagnostics
doctor-ai = ["dep:rockbot-doctor", "rockbot-tui/doctor-ai"]
# Embedded butler companion agent
butler = ["dep:rockbot-butler", "rockbot-gateway/butler", "rockbot-tui/butler"]
# Noise handshake and transport primitives
noise = ["rockbot-gateway/noise", "rockbot-client/noise", "rockbot-tui/noise"]
# Remote tool execution
remote-exec = ["noise", "rockbot-gateway/remote-exec", "rockbot-client/remote-exec", "rockbot-tui/remote-exec"]
# S3 CA distribution + Route53 DNS
bedrock-deploy = ["dep:rockbot-deploy", "rockbot-deploy/bedrock", "rockbot-gateway/bedrock-deploy"]
# Allow plain-text HTTP/WS connections
http-insecure = ["rockbot-gateway/http-insecure", "rockbot-client/http-insecure", "rockbot-tui/http-insecure"]

[lints]
workspace = true

[dependencies]
rockbot-agent = { path = "../rockbot-agent" }
rockbot-client = { path = "../rockbot-client" }
rockbot-config = { path = "../rockbot-config" }
rockbot-gateway = { path = "../rockbot-gateway", default-features = false }
rockbot-session = { path = "../rockbot-session" }
rockbot-tools = { path = "../rockbot-tools" }
rockbot-memory = { path = "../rockbot-memory" }
rockbot-security = { path = "../rockbot-security" }
rockbot-credentials = { path = "../rockbot-credentials" }
rockbot-credentials-schema = { path = "../rockbot-credentials-schema" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }
rockbot-llm-anthropic = { path = "../rockbot-llm-anthropic", optional = true }
rockbot-llm-bedrock = { path = "../rockbot-llm-bedrock", optional = true }
rockbot-llm-ollama = { path = "../rockbot-llm-ollama", optional = true }
rockbot-llm-openai = { path = "../rockbot-llm-openai", optional = true }
rockbot-pki = { path = "../rockbot-pki" }
rockbot-doctor = { path = "../rockbot-doctor", optional = true }
rockbot-overseer = { path = "../rockbot-overseer", optional = true }
rockbot-deploy = { path = "../rockbot-deploy", optional = true }
rockbot-butler = { path = "../rockbot-butler", optional = true }
rockbot-store = { path = "../rockbot-store" }
rockbot-tui = { path = "../rockbot-tui", default-features = false }

uuid = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
time = { workspace = true }
rpassword = "7"
getrandom = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
