[package]
name = "rockbot-client"
version.workspace = true
edition = "2021"
description = "Gateway client library for RockBot (WS, ACP, remote execution)"
license = "MIT"

[features]
# Noise handshake and transport primitives
noise = ["dep:snow"]
# Remote tool execution builds on the Noise transport
remote-exec = ["noise"]
# Allow plain-text HTTP/WS connections (insecure; default is TLS-only)
http-insecure = []

[lints]
workspace = true

[dependencies]
rockbot-config = { path = "../rockbot-config" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
rustls = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Noise Protocol for remote execution (optional)
snow = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
