[package]
name = "rockbot-core"
version.workspace = true
edition = "2021"
description = "RockBot facade crate — re-exports from focused subcrates for backward compatibility"
license = "MIT"

[features]
default = ["bedrock", "discord", "telegram", "signal", "tools-credentials", "tools-mcp", "tools-markdown"]
# LLM providers
anthropic = ["rockbot-llm/anthropic", "rockbot-gateway/anthropic"]
openai = ["rockbot-llm/openai", "rockbot-gateway/openai"]
ollama = ["rockbot-llm/ollama", "rockbot-gateway/ollama"]
bedrock = ["rockbot-llm/bedrock", "rockbot-gateway/bedrock"]
# Channel providers
discord = ["rockbot-gateway/discord"]
telegram = ["rockbot-gateway/telegram"]
signal = ["rockbot-gateway/signal"]
# Tool providers
tools-credentials = ["rockbot-gateway/tools-credentials"]
tools-mcp = ["rockbot-gateway/tools-mcp"]
tools-markdown = ["rockbot-gateway/tools-markdown"]
# Telemetry
otel = ["rockbot-agent/otel", "rockbot-gateway/otel"]
# Embedded overseer
overseer = ["rockbot-gateway/overseer"]
# Remote tool execution over Noise Protocol
remote-exec = ["rockbot-client/remote-exec", "rockbot-agent/remote-exec", "rockbot-gateway/remote-exec"]

[lints]
workspace = true

[dependencies]
rockbot-agent = { path = "../rockbot-agent" }
rockbot-client = { path = "../rockbot-client" }
rockbot-config = { path = "../rockbot-config" }
rockbot-gateway = { path = "../rockbot-gateway", default-features = false }
rockbot-session = { path = "../rockbot-session" }
rockbot-webui = { path = "../rockbot-webui" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
