[package]
name = "rockbot-core"
version.workspace = true
edition = "2021"
description = "RockBot facade crate — re-exports from focused subcrates for backward compatibility"
license = "MIT"

[features]
default = ["bedrock", "discord", "telegram", "signal", "tools-credentials", "tools-mcp", "tools-markdown"]
# LLM providers
anthropic = ["rockbot-llm/anthropic", "rockbot-gateway/anthropic"]
openai = ["rockbot-llm/openai", "rockbot-gateway/openai"]
ollama = ["rockbot-llm/ollama", "rockbot-gateway/ollama"]
bedrock = ["rockbot-llm/bedrock", "rockbot-gateway/bedrock"]
# Channel providers
discord = ["rockbot-gateway/discord"]
telegram = ["rockbot-gateway/telegram"]
signal = ["rockbot-gateway/signal"]
# Tool providers
tools-credentials = ["rockbot-gateway/tools-credentials"]
tools-mcp = ["rockbot-gateway/tools-mcp", "rockbot-agent/tools-mcp"]
tools-markdown = ["rockbot-gateway/tools-markdown"]
# Telemetry
otel = ["rockbot-agent/otel", "rockbot-gateway/otel"]
# Embedded overseer
overseer = ["rockbot-gateway/overseer"]
# Embedded butler companion agent
butler = ["rockbot-gateway/butler"]
# Remote tool execution over Noise Protocol
remote-exec = ["rockbot-client/remote-exec", "rockbot-agent/remote-exec", "rockbot-gateway/remote-exec"]
# S3 CA distribution + Route53 DNS
bedrock-deploy = ["rockbot-gateway/bedrock-deploy"]
# Allow plain-text HTTP/WS connections (insecure; default requires TLS)
http-insecure = ["rockbot-gateway/http-insecure", "rockbot-client/http-insecure"]

[lints]
workspace = true

[dependencies]
rockbot-chat = { path = "../rockbot-chat" }
rockbot-agent = { path = "../rockbot-agent" }
rockbot-client = { path = "../rockbot-client" }
rockbot-config = { path = "../rockbot-config" }
rockbot-gateway = { path = "../rockbot-gateway", default-features = false }
rockbot-session = { path = "../rockbot-session" }
rockbot-webui = { path = "../rockbot-webui" }
rockbot-llm = { path = "../rockbot-llm", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
